--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
         ports:
           - "3306:3306"
         options: >-
-          --health-cmd "mysqladmin ping -p"password" --health-interval 10s --health-start-period 10s --health-timeout 5s --health-retries 10
+          --health-cmd "mysqladmin ping -ptempdbpassword" --health-interval 10s --health-start-period 10s --health-timeout 5s --health-retries 10
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
@@ -44,7 +44,7 @@ jobs:
               connection: {
               host: '127.0.0.1',
               user: 'root',
-              password: 'password',
+              password: 'tempdbpassword',
               database: 'pizza',
               connectTimeout: 60000,
               },
@@ -79,7 +79,7 @@ jobs:
           cp -r src/* dist
           cp *.json dist
           sed -i "s/root/${{ secrets.DB_USERNAME }}/g" dist/config.js
-          sed -i "s/password/${{ secrets.DB_PASSWORD }}/g" dist/config.js
+          sed -i "s/tempdbpassword/${{ secrets.DB_PASSWORD }}/g" dist/config.js
           sed -i "s/127.0.0.1/${{ secrets.DB_HOSTNAME }}/g" dist/config.js
 
       - name: Update distribution artifact
