--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -145,4 +145,4 @@ jobs:
 
       - name: Annotate deployment in Grafana
         run: |
-          curl -s -X POST https://youraccountname.grafana.net/api/annotations -H "Authorization: Bearer ${{ secrets.GRAFANA_ACCESS_TOKEN }}" -H "Content-Type:application/json" -d '{"dashboardUID":"xyz123", "panelId":15, "tags":["backend","production"], "text":"Version '"$version"' deployed" }'
+          curl -s -X POST https://johnnephiolson.grafana.net/api/annotations -H "Authorization: Bearer ${{ secrets.GRAFANA_ACCESS_TOKEN }}" -H "Content-Type:application/json" -d '{"dashboardUID":"jo2l2hw", "panelId":2, "tags":["backend","production"], "text":"Version '"$version"' deployed" }'
